Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhDBP0Vhu9wBIYSbUpsxBS",
+      "authorship_tag": "ABX9TyOto9PagC7vr1puBqIs5fV9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,8 @@
         "id": "5sevcYNyHthT"
       },
       "source": [
-        "# テキスト\n",
-        "\n",
+        "# メモ\n",
+        "テキスト\n",
         "1. https://www.w3schools.com/cpp/   w3scoolのC++ Tutorial\n",
         "1. https://rinatz.github.io/cpp-book/ch01-02-hello-world/  ゼロから学ぶC++ (book形式)\n"
       ]
@@ -3746,7 +3746,7 @@
         "  cout << food << endl;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3769,7 +3769,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3808,7 +3808,7 @@
         "    cout << thisfood << endl;\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3831,7 +3831,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3844,15 +3844,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jitnO9S9TGTC"
-      },
-      "source": [
-        "# 関数 function\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "rjylv-JQTffr",
@@ -3862,6 +3853,7 @@
         "outputId": "ac965b6e-e274-43c5-9a14-c4442cf94451"
       },
       "source": [
+        "# 関数 function\n",
         "# 関数の宣言\n",
         "# テキストはこのように void 関数を例に出し、その中で cout を使うが\n",
         "# 関数型の観点からは気持ち悪い\n",
@@ -3877,7 +3869,7 @@
         "  myFunction();\n",
         "}\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3900,7 +3892,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3936,7 +3928,7 @@
         "id": "v9uP_tL-uWIq",
         "outputId": "cc2c856d-b365-41d0-a2ba-5e6ba635d834"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3959,7 +3951,7 @@
         "id": "RAkvW89ruV1p",
         "outputId": "ccdbd6c6-ffa3-4723-93d6-59f1d9d0a1e8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4034,7 +4026,7 @@
         "  myFunction();\n",
         "}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4057,7 +4049,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4205,7 +4197,7 @@
         "  cout << firstNum << secondNum << endl;\n",
         "}\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4228,7 +4220,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4276,7 +4268,7 @@
         "id": "CXaeYz5n0Yvp",
         "outputId": "779b1ded-2bbb-4bbb-8a32-a8c78434d4cc"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4299,7 +4291,7 @@
         "id": "bSl5BaY80YUp",
         "outputId": "81d87e38-1194-455c-c9cd-ce086ad8529b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4343,7 +4335,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4366,7 +4358,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4412,7 +4404,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4435,7 +4427,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4484,7 +4476,7 @@
         "  cout << carObj2.brand << \" \" << carObj2.model << \" \" << carObj2.year << endl;\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4507,7 +4499,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4587,7 +4579,7 @@
         "  myObj.myMethod();  // Call the method\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4610,7 +4602,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4686,7 +4678,7 @@
         "  MyClass myObj;    // Create an object of MyClass (this will call the constructor)\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4709,7 +4701,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4753,7 +4745,7 @@
         "  cout << carObj2.brand << \" \" << carObj2.model << \" \" << carObj2.year << endl;\n",
         "}"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5224,7 +5216,7 @@
         "  MyReadFile.close();\n",
         "}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5247,7 +5239,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5284,7 +5276,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5307,7 +5299,7 @@
         },
         "outputId": "9d6f817a-39a6-446d-d393-28beab8af793"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5346,7 +5338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5405,7 +5397,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5428,7 +5420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5455,7 +5447,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5487,7 +5479,7 @@
         "Blest be the man that spares these stones,\n",
         "And cursed be he that moves my bones."
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5528,7 +5520,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5551,7 +5543,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5564,15 +5556,6 @@
             "--- William Shakespeare's Epitaph\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "z7374E9K9xYk"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -5606,7 +5589,7 @@
         "  }\n",
         "}"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5629,7 +5612,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5669,7 +5652,7 @@
         "  }\n",
         "}"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5692,7 +5675,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5759,7 +5742,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5782,7 +5765,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5796,11 +5779,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9wl8EJ3m4pt2"
+        "id": "9wl8EJ3m4pt2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4e7772db-0106-4641-a351-ae050096ff7f"
       },
       "source": [
+        "# 単純なプログラム\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -5809,31 +5796,54 @@
         "  int y = 6;\n",
         "  int sum = x + y;\n",
         "  cout << sum;\n",
-        "  return 0;\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KAS06TYN4pjE"
+        "id": "KAS06TYN4pjE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a315f52-22bc-49aa-bf74-d92540b97563"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b__3S-ZD4sis"
+        "id": "b__3S-ZD4sis",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de9f86b3-f41a-42fa-caba-72ac5b8dfcf4"
       },
       "source": [
+        "# colab , jupyter の入出力\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -5846,40 +5856,50 @@
         "  cin >> y;\n",
         "  sum = x + y;\n",
         "  cout << \"Sum is: \" << sum;\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YWsIYiPoNc2w"
+        "id": "YWsIYiPoNc2w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b95ba724-2818-44ee-f969-ec65cd61f008"
       },
       "source": [
         "!g++ temp.cpp; echo 99 100 | ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rMoZBbDnMWWv"
-      },
-      "source": [
-        "その他 miscellaneous"
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Type a number: Type another number: Sum is: 199"
+          ]
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "DeMOjhEZNCyy"
-      },
       "source": [
-        "sort "
-      ]
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "3f3Gz0U96jz_"
+      }
     },
     {
       "cell_type": "code",
@@ -5887,7 +5907,7 @@
         "id": "ESksa-pMNF1s"
       },
       "source": [
-        "# sort\n",
+        "# sort array version\n",
         "%%writefile temp.cpp\n",
         "#include <algorithm>\n",
         "# include <bits/stdc++.h>\n",
@@ -5922,12 +5942,11 @@
         "id": "jpWxNKiKNJY6"
       },
       "source": [
-        "# 普通はこっちを使うみたい\n",
+        "# sort 普通はこっちを使う\n",
         "%%writefile temp.cpp\n",
-        "#include <algorithm>\n",
         "# include <bits/stdc++.h>\n",
-        "#include <vector>\n",
         "using namespace std;\n",
+        "\n",
         "int main() {\n",
         "  vector<int> vec { 23, 5, -10, 0, 0, 321, 1, 2, 99, 30 };\n",
         "  sort(vec.begin(), vec.end());\n",
