Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOe4n+4NVZuGdK237MAteCR",
+      "authorship_tag": "ABX9TyMxVGsRp5N7L2/P+p7dG6y9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6437,7 +6437,7 @@
         "    cout << result << endl;  // 8\n",
         "}"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6460,7 +6460,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6494,7 +6494,7 @@
         "    cout << result << endl;  // 10\n",
         "}"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6517,7 +6517,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6563,7 +6563,7 @@
         "    cout << result_ref << endl;   // 8\n",
         "}"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6586,7 +6586,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6627,7 +6627,7 @@
         "\n",
         "}"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6650,7 +6650,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6691,7 +6691,7 @@
         "    cout << *(p + 5) << endl; // 0\n",
         "}"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6750,7 +6750,7 @@
         "    PrintArray2(x);\n",
         "}"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6800,7 +6800,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6849,7 +6849,7 @@
         "    PrintArray(x, x.size());\n",
         "}\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6898,7 +6898,7 @@
         "    PrintArray(x, size(x));\n",
         "}\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6966,7 +6966,7 @@
         "    PrintArray(x, size(x));\n",
         "}\n"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7027,7 +7027,7 @@
         "    PrintArray(x, x.size());\n",
         "}"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7081,7 +7081,7 @@
         "  });\n",
         "}"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7104,7 +7104,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7161,7 +7161,7 @@
         "    cout << get<2>(person) << endl;\n",
         "}"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7184,7 +7184,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7198,19 +7198,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M-bj_YaCuS0E"
-      },
-      "source": [
-        "\n",
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "1dS3v0Obtqde"
+        "id": "1dS3v0Obtqde",
+        "outputId": "0e7ce169-65b3-491d-d888-5b011b375dc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# tie() 関数を使うとタプルの要素を個別の変数に まとめて代入することができる\n",
@@ -7231,41 +7225,58 @@
         "    cout << country << endl;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Lv2s5Lm9tqPT"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eZVGXU__ukvA"
-      },
-      "source": [
-        "# ペア pair\n",
-        "\n",
-        "ペアは2つの値をひとまとめにして扱うことができる型。 要素数が2つのタプルと同じか?"
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KuUb7wSiusYL"
+        "id": "Lv2s5Lm9tqPT",
+        "outputId": "80a311cc-0bab-4343-c258-49ed4670b344",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bob\n",
+            "20\n",
+            "USA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KuUb7wSiusYL",
+        "outputId": "dc0d54d6-b294-469d-d49b-9a98eb53dde8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# ペア pair\n",
+        "# ペアは2つの値をひとまとめにして扱うことができる\n",
+        "# 要素数が2つのタプルと同じか?\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <utility>\n",
+        "using namespace std;\n",
         "\n",
         "pair<string, int> person {\"Bob\", 20};\n",
         "\n",
@@ -7274,61 +7285,97 @@
         "    cout << get<1>(person) << endl;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5ShiQUg4utiR"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SflvUsgbvsM_"
-      },
-      "source": [
-        "pair では first, second が使える。"
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HiNtfz0fvUMz"
+        "id": "5ShiQUg4utiR",
+        "outputId": "3d37be29-480d-401a-b10a-2578191bf6bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bob\n",
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HiNtfz0fvUMz",
+        "outputId": "cae8fcc6-eb7d-41e2-992b-552a3ce1d5ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# pair では first, second が使える。\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <utility>\n",
+        "using namespace std;\n",
         "\n",
         "pair<string, int> person {\"Bob\", 20};\n",
         "\n",
         "int main() {\n",
         "    cout << person.first << endl;\n",
         "    cout << person.second << endl;\n",
-        "}\n",
-        "\n"
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fOvNI0OavT7z"
+        "id": "fOvNI0OavT7z",
+        "outputId": "65956810-9cd6-4392-df69-34a41e733d35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bob\n",
+            "20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -7337,9 +7384,7 @@
       },
       "source": [
         "# pair の初期化のバリエーション\n",
-        "\n",
         "%%script false\n",
-        "\n",
         "pair<string, int> person { \"Bob\", 20 };\n",
         "pair<string, int> person(\"Bob\", 20);\n",
         "pair<string, int> person = make_pair(\"Bob\", 20);"
@@ -7348,24 +7393,19 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dsju0xpSwb0-"
-      },
-      "source": [
-        "tie() も使えるが #include <tuple> が必要。"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "5pgTJWonwS4z"
+        "id": "5pgTJWonwS4z",
+        "outputId": "55ab56ef-e1ed-4b5b-8db6-3cb1bb108621",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# tie() も使える\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <tuple>\n",
+        "using namespace std;\n",
         "\n",
         "pair<string, int> person { \"Bob\", 20 };\n",
         "\n",
@@ -7377,12 +7417,18 @@
         "\n",
         "    cout << name << endl;\n",
         "    cout << age << endl;\n",
-        "    cout << person.first << endl;\n",
-        "    cout << person.second << endl;    \n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -7396,35 +7442,20 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "qljwdZdfxtGU"
-      },
-      "source": [
-        "`#include <tuple>` すれば `#include <utility>` しなくても、 pair 関係の関数やメソッドは使えるみたい。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-v9GIoAvy1kE"
+        "id": "X1pCjiDNCNFK",
+        "outputId": "4fbf51da-ec3d-43f9-8914-cbb99419dce2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# ベクター vector\n",
-        "\n",
-        "要素数を実行時に変更できる配列を扱うには vector を使用する。\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "X1pCjiDNCNFK"
-      },
-      "source": [
+        "# 要素数を実行時に変更できる配列\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <vector>\n",
+        "using namespace std;\n",
         "\n",
         "int main() {\n",
         "    vector<int> x = {0, 1, 2, 3, 4};\n",
@@ -7435,36 +7466,62 @@
         "    cout << x.size() << endl;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bhsBLkQHCMn-"
+        "id": "bhsBLkQHCMn-",
+        "outputId": "871788a0-ab27-4055-ad8b-97b5d3dcb339",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ix0D9yUwF5De"
+        "id": "ix0D9yUwF5De",
+        "outputId": "386faddd-8d9d-4bb4-e66b-35765f1436e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# vector の実験\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <vector>\n",
+        "using namespace std;\n",
         "\n",
         "int main() {\n",
         "    vector<int> x = {0, 1, 2, 3, 4};\n",
         "    auto size1 = x.size();  // 5\n",
         "    cout << size1 << endl;\n",
         "\n",
-        "    x.emplace_back(5);\n",
+        "    x.emplace_back(5); // 質問 push_back と何が違うのか?\n",
         "    auto size2 = x.size();  // 6\n",
         "    cout << x[5] << endl;\n",
         "    cout << size2 << endl;\n",
@@ -7474,30 +7531,57 @@
         "    cout << size3 << endl;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jieTZe1pF5dm"
+        "id": "jieTZe1pF5dm",
+        "outputId": "b54e418d-62d2-46ea-8a57-c8478e641524",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5\n",
+            "6\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kMqkQGnQHHIt"
+        "id": "kMqkQGnQHHIt",
+        "outputId": "b6a12d0a-1f0e-40d7-8f56-30eac0ddb1ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# ベクターの先頭ポインターの取得 x.data()\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <vector>\n",
+        "using namespace std;\n",
         "\n",
         "int main() {\n",
         "    vector<int> x = {4, 300, 2, 1, 0};\n",
@@ -7506,46 +7590,72 @@
         "\n",
         "    cout << px << endl;\n",
         "    cout << num << endl;\n",
-        "    cout << *(px + 2) << endl;\n",
+        "    cout << *(px + 2) << endl; // C の配列みたいなことが出来る!!!!\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "blvPc8zwHHhJ"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KBH5iLW8K332"
-      },
-      "source": [
-        "# マップ 連想配列 \n",
-        "連想配列 associative array は、C++ では map として実装される。\n",
-        "\n",
-        "別途 unordered_map もある。\n",
-        "\n",
-        "map はキーでソートしてデータを管理するのに対し、unordered_map はキーから計算するハッシュでデータを管理するので、パフォーマンスは unordered_map の方が優れている。"
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g0782Y5kLLBZ"
+        "id": "blvPc8zwHHhJ",
+        "outputId": "4babca94-a25e-4af8-f52d-4fdd57b0fddf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0x555d41842020\n",
+            "4\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "9-RSPLhToeh0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g0782Y5kLLBZ",
+        "outputId": "3959f740-842e-465e-d66b-6d99e2ab5b62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# マップ 連想配列 \n",
+        "# 連想配列 associative array は、C++ では map として実装される\n",
+        "# 別途 unordered_map もある\n",
+        "# map はキーでソートしてデータを管理するのに対し、unordered_map はキーから計算する\n",
+        "# ハッシュでデータを管理するので、パフォーマンスは unordered_map の方が優れている\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <unordered_map>\n",
+        "using namespace std;\n",
         "\n",
         "unordered_map<string, int> persons = {\n",
         "    {\"Alice\", 18},\n",
@@ -7560,19 +7670,41 @@
         "    cout << persons[\"Eve\"] << endl;    // 19\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rzKPw379LLmh"
+        "id": "rzKPw379LLmh",
+        "outputId": "f7be1a83-7101-483e-85fc-2b40b8e29f15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n",
+            "20\n",
+            "19\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
