--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6b2oRJa4o8Q8CfcXO46QY",
+      "authorship_tag": "ABX9TyO5DxLOnP1Gt3qGkFglK0Cb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,11 @@
         "# メモ\n",
         "テキスト\n",
         "1. https://www.w3schools.com/cpp/   w3scoolのC++ Tutorial\n",
-        "1. https://rinatz.github.io/cpp-book/ch01-02-hello-world/  ゼロから学ぶC++ (book形式)\n"
+        "1. https://rinatz.github.io/cpp-book/ch01-02-hello-world/  ゼロから学ぶC++ (book形式)\n",
+        "\n",
+        "正規表現を探してやる\n",
+        "\n",
+        "w3scoolのC++ Tutorial の exercise と quiz をやる\n"
       ]
     },
     {
@@ -86,6 +90,7 @@
         }
       },
       "source": [
+        "#\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -8320,7 +8325,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8344,7 +8349,7 @@
         "!g++ temp.cpp; echo 3 | ./a.out\n",
         "!echo カレー | ./a.out"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8381,7 +8386,7 @@
         "    Function();\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8400,7 +8405,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8461,7 +8466,7 @@
         "    cout << x << endl; // x は100のまま\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8484,7 +8489,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8517,7 +8522,7 @@
         "    cout << *x << endl; // x が指す先の値も 50 になる\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8540,7 +8545,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8584,7 +8589,7 @@
         "    cout << b << endl;  // 50\n",
         "}"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8607,7 +8612,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8649,7 +8654,7 @@
         "    Print(move(str));\n",
         "}"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8672,7 +8677,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8711,7 +8716,7 @@
         "    cout << *x << endl;\n",
         "} // 所有者が0人になるので、 x のデストラクタで自動的に delete が行われる。"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8734,7 +8739,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8768,7 +8773,7 @@
         "    cout << *x << endl;\n",
         "} // x が所有しているリソースが解放される。"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8791,7 +8796,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8825,7 +8830,7 @@
         "    cout << *y << endl;\n",
         "} // y が所有しているリソースが解放される。"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8848,7 +8853,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8895,7 +8900,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8918,7 +8923,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8968,7 +8973,7 @@
         "    cout << s.Area() << endl;\n",
         "}"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8991,7 +8996,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9043,7 +9048,7 @@
         "    cout << \"area = \" << r.Area() << endl;\n",
         "}"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9066,7 +9071,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9123,7 +9128,7 @@
         "    r.Describe();\n",
         "}"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9146,7 +9151,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9236,7 +9241,7 @@
         "    cout << d.Get(2) << endl;\n",
         "}"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9259,7 +9264,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9326,7 +9331,7 @@
         "    cout << b->Get(2) << endl;\n",
         "}"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9349,7 +9354,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9416,7 +9421,7 @@
         "    cout << b->Get(2) << endl;\n",
         "}"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9439,7 +9444,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9496,7 +9501,7 @@
         "    cout << b.Value() << endl;  // -2\n",
         "}"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9519,7 +9524,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9572,7 +9577,7 @@
         "    cout << b.Value() << endl;  // -2\n",
         "}"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9595,7 +9600,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9650,7 +9655,7 @@
         "    cout << c.Value() << endl;  // 5    \n",
         "}\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9673,7 +9678,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9729,7 +9734,7 @@
         "    cout << c.Value() << endl;  // 5    \n",
         "}\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9752,7 +9757,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9851,7 +9856,7 @@
         "    cout << b.Value() << endl;  // 3\n",
         "}"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9874,7 +9879,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9927,7 +9932,7 @@
         "    cout << b.Value() << endl;  // 2\n",
         "}"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9950,7 +9955,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9988,7 +9993,7 @@
         "    cout << Sum<double>(1.2, 3.4)  << endl;  // 4.6\n",
         "}"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10011,7 +10016,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10058,7 +10063,7 @@
         "    cout << r2.Area() << endl;  // 4.08\n",
         "}"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10081,7 +10086,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10128,7 +10133,7 @@
         "    cout << Max(v2) << endl;\n",
         "}"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10151,7 +10156,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10194,7 +10199,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10230,9 +10235,7 @@
       "source": [
         "# 正規表現 regex\n",
         "%%writefile temp.cpp\n",
-        "#include <string>\n",
-        "#include <regex>\n",
-        "#include <cassert>\n",
+        "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -10249,12 +10252,12 @@
       ],
       "metadata": {
         "id": "BYDc3vLLCoJC",
-        "outputId": "e3a03c66-b05f-404f-cbcd-2196a500e290",
+        "outputId": "ecb4ff30-8c22-4128-f076-e86baa240d58",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 72,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -10273,7 +10276,7 @@
       "metadata": {
         "id": "uxcu74g4CqjH"
       },
-      "execution_count": 73,
+      "execution_count": 4,
       "outputs": []
     },
     {
