--- a/cpp_functional.ipynb
+++ b/cpp_functional.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_functional.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNMPwSXcVDf948UBSbHrCUs",
+      "authorship_tag": "ABX9TyOt1GPJIrCO0LXb7OdnTHMv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -729,7 +728,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +742,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!echo | g++ -dM -E -x c++ - | grep -F __cplusplus"
+        ""
       ],
       "metadata": {
         "id": "nu8BxWla8-fc",
@@ -752,7 +751,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -766,7 +765,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!sudo apt install -y g++-7"
+        ""
       ],
       "metadata": {
         "id": "YID26ppJtME9",
@@ -775,7 +774,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +796,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++-7 --version"
+        ""
       ],
       "metadata": {
         "id": "Rtw_NK8K8-WF",
@@ -806,7 +805,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,7 +823,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++-7  temp.cpp; ./a.out"
+        ""
       ],
       "metadata": {
         "id": "4TtCFgIU8Mi5"
@@ -846,12 +845,12 @@
       ],
       "metadata": {
         "id": "LczxuXpPtq8G",
-        "outputId": "ffe33cf0-01e0-4fcc-ceec-296f0eaeeacd",
+        "outputId": "d58919ad-d789-480e-d91a-b3a15e962151",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,20 +864,30 @@
     {
       "cell_type": "code",
       "source": [
-        "!sudo add-apt-repository ppa:ubuntu-toolchain-r/test\n",
-        "!sudo apt update\n",
-        "!sudo apt install -y g++-7"
+        "!g++ -std=c++17 temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "JA3_zUWuBHkH"
+        "id": "JA3_zUWuBHkH",
+        "outputId": "619071e7-0d80-49aa-d498-f488052eabcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!g++-7 --version"
+        ""
       ],
       "metadata": {
         "id": "O9GNpbiWtqz6",
@@ -887,7 +896,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,6 +921,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1YF4qemSUd5Z"
+      }
     }
   ]
 }
